--- a/src/pages/Cursos.astro
+++ b/src/pages/Cursos.astro
@@ -1,12 +1,14 @@
 ---
-import '../styles/tailwind.css';
-import Navbar from '../components/Navbar.astro';
-import Footer from '../components/Footer.astro';
-import ListaCursos from '../components/ListaCursos.astro';
+import "../styles/tailwind.css";
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
+import ListaCursos from "../components/ListaCursos.astro";
 ---
+
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
