--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -11,6 +11,7 @@ import Resumen from "../components/Resumen.astro";
 <html lang="es">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
             rel="stylesheet"
