--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import DondeEstamos from "../components/DondeEstamos.astro";
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
@@ -20,7 +21,12 @@ import DondeEstamos from "../components/DondeEstamos.astro";
   </head>
   <body class="pt-16 bg-gray-100">
     <Navbar />
-    <Imagen title="Autoescuela La Flor" p1="Tu camino hacia la conducción empieza aquí" p2="Estamos en Grado" image="/images/escaparate.jpg"/>
+    <Imagen
+      title="Autoescuela La Flor"
+      p1="Tu camino hacia la conducción empieza aquí"
+      p2="Estamos en Grado"
+      image="/images/escaparate.jpg"
+    />
     <DondeEstamos />
     <PresentacionAula />
     <PresentacionVehiculos />
