--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Animaciones from "../components/AnimacionesIndex.astro";
 import DondeEstamos from "../components/DondeEstamos.astro";
 ---
 
-<html lang="es">
+<html lang="es" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,7 @@ import DondeEstamos from "../components/DondeEstamos.astro";
     />
     <title>Autoescuela La Flor</title>
   </head>
-  <body class="pt-16 bg-gray-100">
+  <body class="pt-16 bg-gray-100 overflow-x-hidden">
     <Navbar />
     <Imagen
       title="Autoescuela La Flor"
