Mejorado alineacion texto footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@
             </ul>
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400 hover:underline"><a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6">Pl. Longoria, 2, Bajo, 33820 Grado, Asturias</a></span>
+        <span class="block text-sm text-gray-500 text-center dark:text-gray-400 hover:underline"><a target="_blank" href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6">Pl. Longoria, 2, Bajo, 33820 Grado, Asturias</a></span>
     </div>
 </footer>
 
