--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,25 @@
 
 
-<footer class="bg-white rounded-lg dark:bg-gray-900 mt-2">
+<footer class="bg-gray-800 rounded-lg mt-2">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
-            <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Logo</span>
+            <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3">
+                <span class="self-center whitespace-nowrap text-[#ACD14E] font-diamond italic text-3xl sm:text-5xl lg:text-5xl">La Flor</span>
             </a>
-            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
-                <li>
-                    <a href="/QuienesSomos" class="hover:underline me-4 md:me-6">Sobre nosotros</a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-300 sm:mb-0">
+                <li class="hover:text-white">
+                    <a href="/QuienesSomos" class="me-4 md:me-6">Sobre nosotros</a>
                 </li>
-                <li>
-                    <a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6" class="hover:underline me-4 md:me-6">Nuestra ubicación</a>
+                <li class="hover:text-white">
+                    <a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6" class="me-4 md:me-6">Nuestra ubicación</a>
                 </li>
-                <li>
+                <li class="hover:text-white">
                     <i class="fa-solid fa-phone"></i> 638 24 87 31
                 </li>
             </ul>
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-        <span class="block text-sm text-gray-500 text-center dark:text-gray-400 hover:underline"><a target="_blank" href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6">Pl. Longoria, 2, Bajo, 33820 Grado, Asturias</a></span>
+        <span class="block text-sm text-gray-300 text-center hover:text-white"><a target="_blank" href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6">Pl. Longoria, 2, Bajo, 33820 Grado, Asturias</a></span>
     </div>
 </footer>
 
