--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -1,5 +1,5 @@
-<section class="bg-white py-16 px-4 vehiculos-slide">
-    <div class="overflow-hidden bg-white py-6 sm:py-2">
+<section class="fondoTarj py-16 px-4 vehiculos-slide">
+    <div class="overflow-hidden py-6 sm:py-2">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div
                 class="mx-auto lg:grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col-reverse items-center"
@@ -20,21 +20,21 @@
                     <div
                         class="lg:max-w-lg text-center flex flex-col items-center lg:items-start lg:block"
                     >
-                        <h2 class="text-base/7 font-semibold text-indigo-600">
+                        <h2 class="text-base/7 font-semibold verdeMarca">
                             Aprueba más rápido
                         </h2>
                         <p
-                            class="mt-2 text-4xl font-semibold tracking-tight text-pretty text-gray-900 sm:text-5xl"
+                            class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl"
                         >
                             Un mejor método
                         </p>
                         
                         <dl
-                            class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-600 lg:max-w-none"
+                            class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-400 lg:max-w-none"
                         >
                             <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <i class="fas fa-car absolute top-1 left-1 size-5 text-indigo-600"></i>
+                                <dt class="inline font-semibold text-white">
+                                    <i class="fas fa-car absolute top-1 left-1 size-5 verdeMarca"></i>
 
                                     Push to deploy.
                                 </dt>
@@ -46,8 +46,8 @@
                                 </dd>
                             </div>
                             <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <i class="fa-solid fa-motorcycle absolute top-1 left-1 size-5 text-indigo-600"></i>
+                                <dt class="inline font-semibold text-white">
+                                    <i class="fa-solid fa-motorcycle absolute top-1 left-1 size-5 verdeMarca"></i>
 
                                     SSL certificates.
                                 </dt>
@@ -57,8 +57,8 @@
                                 </dd>
                             </div>
                             <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <i class="fa-solid fa-gauge-simple-high absolute top-1 left-1 size-5 text-indigo-600"></i>
+                                <dt class="inline font-semibold text-white">
+                                    <i class="fa-solid fa-gauge-simple-high absolute top-1 left-1 size-5 verdeMarca"></i>
 
                                     Database backups.
                                 </dt>
