--- a/src/pages/Cursos.astro
+++ b/src/pages/Cursos.astro
@@ -16,7 +16,7 @@ import AnimacionesCursos from "../components/AnimacionesCursos.astro";
     />
     <title>Autoescuela La Flor</title>
   </head>
-  <body class="pt-16 bg-gray-100 overflow-x-hidden">
+  <body class="pt-16 fondoCont overflow-x-hidden">
     <Navbar />
     <ListaCursos />
     <Footer />
