--- a/src/pages/QuienesSomos.astro
+++ b/src/pages/QuienesSomos.astro
@@ -18,7 +18,7 @@ import Resumen from "../components/Resumen.astro";
         />
         <title>Autoescuela La Flor</title>
     </head>
-    <body class="pt-16 bg-gray-100">
+    <body class="pt-16 fondoCont">
         <Navbar />
         <Imagen
             title="¿Quiénes somos?"
