--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import DondeEstamos from "../components/DondeEstamos.astro";
     />
     <title>Autoescuela La Flor</title>
   </head>
-  <body class="pt-16 bg-gray-100 overflow-x-hidden">
+  <body class="pt-16 bg-gray-100 overflow-x-hidden fondoCont">
     <Navbar />
     <Imagen
       title="Autoescuela La Flor"
