--- a/src/components/DondeEstamos.astro
+++ b/src/components/DondeEstamos.astro
@@ -1,7 +1,7 @@
-<section class="bg-white py-4 px-4 escaparate-slide">
+<section class="fondoTarj py-4 px-4 escaparate-slide">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div
-            class="flex flex-col lg:flex-row items-center gap-6 md:gap-10 p-6 md:p-12 bg-white"
+            class="flex flex-col lg:flex-row items-center gap-6 md:gap-10 p-6 md:p-12"
         >
             <!-- Imagen -->
             <img
@@ -13,11 +13,11 @@
             <!-- Texto -->
             <div class="md:w-3/4 lg:w-1/3">
                 <h2
-                    class="text-2xl text-center lg:text-left md:text-3xl font-bold mb-4 text-gray-800 lg:border-l-4 lg:pl-2"
+                    class="text-2xl text-center lg:text-left md:text-3xl font-bold mb-4 textoTitulo lg:border-l-4 lg:pl-2 lg:border-[#ACD14E]"
                 >
                     Estamos en Grado
                 </h2>
-                <p class="text-gray-600 text-center lg:text-left text-base md:text-lg leading-relaxed">
+                <p class="textoSubtitulo text-center lg:text-left text-base md:text-lg leading-relaxed">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Atque similique itaque ut, sequi tenetur architecto culpa
                     odio labore, dolores a amet corporis deleniti quia, nisi ea
