--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -1,110 +1,85 @@
-<section class="bg-white py-16 px-4 aula-slide">
-    <div class="overflow-hidden bg-white py-6 sm:py-2">
-        <div class="mx-auto max-w-7xl px-6 lg:px-8">
-            <div
-                class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center"
-            >
-                <div class="lg:pt-4 lg:pr-8">
-                    <div
-                        class="lg:max-w-lg text-center flex flex-col items-center lg:items-start lg:block"
-                    >
-                        <h2 class="text-base/7 font-semibold text-indigo-600">
-                            Aprueba más rápido
-                        </h2>
-                        <p
-                            class="mt-2 text-4xl font-semibold tracking-tight text-pretty text-gray-900 sm:text-5xl"
-                        >
-                            Un mejor método
-                        </p>
-                        <p class="mt-6 text-lg/8 text-gray-600">
-                            Tenemos aulas con ordenadores donde podrás estudiar
-                            la teoría de la conducción, practicar tests para el
-                            examen teórico y preguntar a los profesores.
-                        </p>
-                        <dl
-                            class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-600 lg:max-w-none"
-                        >
-                            <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 24 24"
-                                        fill="currentColor"
-                                        class="absolute top-1 left-1 size-5 text-indigo-600"
-                                    >
-                                        <path
-                                            d="M11.25 4.533A9.707 9.707 0 0 0 6 3a9.735 9.735 0 0 0-3.25.555.75.75 0 0 0-.5.707v14.25a.75.75 0 0 0 1 .707A8.237 8.237 0 0 1 6 18.75c1.995 0 3.823.707 5.25 1.886V4.533ZM12.75 20.636A8.214 8.214 0 0 1 18 18.75c.966 0 1.89.166 2.75.47a.75.75 0 0 0 1-.708V4.262a.75.75 0 0 0-.5-.707A9.735 9.735 0 0 0 18 3a9.707 9.707 0 0 0-5.25 1.533v16.103Z"
-                                        ></path>
-                                    </svg>
-
-                                    Push to deploy.
-                                </dt>
-                                <dd class="inline">
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Maiores impedit
-                                    perferendis suscipit eaque, iste dolor
-                                    cupiditate blanditiis ratione.
-                                </dd>
-                            </div>
-                            <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 24 24"
-                                        fill="currentColor"
-                                        class="absolute top-1 left-1 size-5 text-indigo-600"
-                                    >
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M2.25 5.25a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3V15a3 3 0 0 1-3 3h-3v.257c0 .597.237 1.17.659 1.591l.621.622a.75.75 0 0 1-.53 1.28h-9a.75.75 0 0 1-.53-1.28l.621-.622a2.25 2.25 0 0 0 .659-1.59V18h-3a3 3 0 0 1-3-3V5.25Zm1.5 0v7.5a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5v-7.5a1.5 1.5 0 0 0-1.5-1.5H5.25a1.5 1.5 0 0 0-1.5 1.5Z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-
-                                    SSL certificates.
-                                </dt>
-                                <dd class="inline">
-                                    Anim aute id magna aliqua ad ad non deserunt
-                                    sunt. Qui irure qui lorem cupidatat commodo.
-                                </dd>
-                            </div>
-                            <div class="relative pl-9">
-                                <dt class="inline font-semibold text-gray-900">
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 24 24"
-                                        fill="currentColor"
-                                         class="absolute top-1 left-1 size-5 text-indigo-600"
-                                    >
-                                        <path
-                                            d="M11.7 2.805a.75.75 0 0 1 .6 0A60.65 60.65 0 0 1 22.83 8.72a.75.75 0 0 1-.231 1.337 49.948 49.948 0 0 0-9.902 3.912l-.003.002c-.114.06-.227.119-.34.18a.75.75 0 0 1-.707 0A50.88 50.88 0 0 0 7.5 12.173v-.224c0-.131.067-.248.172-.311a54.615 54.615 0 0 1 4.653-2.52.75.75 0 0 0-.65-1.352 56.123 56.123 0 0 0-4.78 2.589 1.858 1.858 0 0 0-.859 1.228 49.803 49.803 0 0 0-4.634-1.527.75.75 0 0 1-.231-1.337A60.653 60.653 0 0 1 11.7 2.805Z"
-                                        ></path>
-                                        <path
-                                            d="M13.06 15.473a48.45 48.45 0 0 1 7.666-3.282c.134 1.414.22 2.843.255 4.284a.75.75 0 0 1-.46.711 47.87 47.87 0 0 0-8.105 4.342.75.75 0 0 1-.832 0 47.87 47.87 0 0 0-8.104-4.342.75.75 0 0 1-.461-.71c.035-1.442.121-2.87.255-4.286.921.304 1.83.634 2.726.99v1.27a1.5 1.5 0 0 0-.14 2.508c-.09.38-.222.753-.397 1.11.452.213.901.434 1.346.66a6.727 6.727 0 0 0 .551-1.607 1.5 1.5 0 0 0 .14-2.67v-.645a48.549 48.549 0 0 1 3.44 1.667 2.25 2.25 0 0 0 2.12 0Z"
-                                        ></path>
-                                        <path
-                                            d="M4.462 19.462c.42-.419.753-.89 1-1.395.453.214.902.435 1.347.662a6.742 6.742 0 0 1-1.286 1.794.75.75 0 0 1-1.06-1.06Z"
-                                        ></path>
-                                    </svg>
-
-                                    Database backups.
-                                </dt>
-                                <dd class="inline">
-                                    Ac tincidunt sapien vehicula erat auctor
-                                    pellentesque rhoncus. Et magna sit morbi
-                                    lobortis.
-                                </dd>
-                            </div>
-                        </dl>
-                    </div>
-                </div>
-                <div class="flex justify-center lg:block">
-                    <img
-                        src="/images/aula.jpg"
-                        alt="Product screenshot"
-                        class="w-full sm:w-148 sm:h-88 aspect-[4/3] overflow-hidden rounded-xl shadow-xl ring-1 ring-gray-400/10"
-                    />
-                </div>
-            </div>
+<section class="fondoTarj text-gray-300 py-16 px-4 aula-slide">
+  <div class="overflow-hidden py-6 sm:py-2">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center">
+        <div class="lg:pt-4 lg:pr-8">
+          <div class="lg:max-w-lg text-center flex flex-col items-center lg:items-start lg:block">
+            <h2 class="text-base/7 font-semibold verdeMarca">
+              Aprueba más rápido
+            </h2>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl">
+              Un mejor método
+            </p>
+            <p class="mt-6 text-lg/8 textoSubtitulo">
+              Tenemos aulas con ordenadores donde podrás estudiar
+              la teoría de la conducción, practicar tests para el
+              examen teórico y preguntar a los profesores.
+            </p>
+            <dl class="mt-10 max-w-xl space-y-8 text-base/7 text-gray-400 lg:max-w-none">
+              <div class="relative pl-9">
+                <dt class="inline font-semibold text-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                       fill="currentColor"
+                       class="absolute top-1 left-1 size-5 verdeMarca">
+                    <path
+                      d="M11.25 4.533A9.707 9.707 0 0 0 6 3a9.735 9.735 0 0 0-3.25.555.75.75 0 0 0-.5.707v14.25a.75.75 0 0 0 1 .707A8.237 8.237 0 0 1 6 18.75c1.995 0 3.823.707 5.25 1.886V4.533ZM12.75 20.636A8.214 8.214 0 0 1 18 18.75c.966 0 1.89.166 2.75.47a.75.75 0 0 0 1-.708V4.262a.75.75 0 0 0-.5-.707A9.735 9.735 0 0 0 18 3a9.707 9.707 0 0 0-5.25 1.533v16.103Z"/>
+                  </svg>
+                  Push to deploy.
+                </dt>
+                <dd class="inline">
+                  Lorem ipsum, dolor sit amet consectetur
+                  adipisicing elit. Maiores impedit
+                  perferendis suscipit eaque, iste dolor
+                  cupiditate blanditiis ratione.
+                </dd>
+              </div>
+              <div class="relative pl-9">
+                <dt class="inline font-semibold text-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                       fill="currentColor"
+                       class="absolute top-1 left-1 size-5 verdeMarca">
+                    <path fill-rule="evenodd"
+                          d="M2.25 5.25a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3V15a3 3 0 0 1-3 3h-3v.257c0 .597.237 1.17.659 1.591l.621.622a.75.75 0 0 1-.53 1.28h-9a.75.75 0 0 1-.53-1.28l.621-.622a2.25 2.25 0 0 0 .659-1.59V18h-3a3 3 0 0 1-3-3V5.25Zm1.5 0v7.5a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5v-7.5a1.5 1.5 0 0 0-1.5-1.5H5.25a1.5 1.5 0 0 0-1.5 1.5Z"
+                          clip-rule="evenodd"/>
+                  </svg>
+                  SSL certificates.
+                </dt>
+                <dd class="inline">
+                  Anim aute id magna aliqua ad ad non deserunt
+                  sunt. Qui irure qui lorem cupidatat commodo.
+                </dd>
+              </div>
+              <div class="relative pl-9">
+                <dt class="inline font-semibold text-white">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                       fill="currentColor"
+                       class="absolute top-1 left-1 size-5 verdeMarca">
+                    <path
+                      d="M11.7 2.805a.75.75 0 0 1 .6 0A60.65 60.65 0 0 1 22.83 8.72a.75.75 0 0 1-.231 1.337 49.948 49.948 0 0 0-9.902 3.912l-.003.002c-.114.06-.227.119-.34.18a.75.75 0 0 1-.707 0A50.88 50.88 0 0 0 7.5 12.173v-.224c0-.131.067-.248.172-.311a54.615 54.615 0 0 1 4.653-2.52.75.75 0 0 0-.65-1.352 56.123 56.123 0 0 0-4.78 2.589 1.858 1.858 0 0 0-.859 1.228 49.803 49.803 0 0 0-4.634-1.527.75.75 0 0 1-.231-1.337A60.653 60.653 0 0 1 11.7 2.805Z"/>
+                    <path
+                      d="M13.06 15.473a48.45 48.45 0 0 1 7.666-3.282c.134 1.414.22 2.843.255 4.284a.75.75 0 0 1-.46.711 47.87 47.87 0 0 0-8.105 4.342.75.75 0 0 1-.832 0 47.87 47.87 0 0 0-8.104-4.342.75.75 0 0 1-.461-.71c.035-1.442.121-2.87.255-4.286.921.304 1.83.634 2.726.99v1.27a1.5 1.5 0 0 0-.14 2.508c-.09.38-.222.753-.397 1.11.452.213.901.434 1.346.66a6.727 6.727 0 0 0 .551-1.607 1.5 1.5 0 0 0 .14-2.67v-.645a48.549 48.549 0 0 1 3.44 1.667 2.25 2.25 0 0 0 2.12 0Z"/>
+                    <path
+                      d="M4.462 19.462c.42-.419.753-.89 1-1.395.453.214.902.435 1.347.662a6.742 6.742 0 0 1-1.286 1.794.75.75 0 0 1-1.06-1.06Z"/>
+                  </svg>
+                  Database backups.
+                </dt>
+                <dd class="inline">
+                  Ac tincidunt sapien vehicula erat auctor
+                  pellentesque rhoncus. Et magna sit morbi
+                  lobortis.
+                </dd>
+              </div>
+            </dl>
+          </div>
         </div>
+        <div class="flex justify-center lg:block">
+          <img
+            src="/images/aula.jpg"
+            alt="Product screenshot"
+            class="w-full sm:w-148 sm:h-88 aspect-[4/3] overflow-hidden rounded-xl shadow-xl ring-1 ring-gray-400/10"
+          />
+        </div>
+      </div>
     </div>
+  </div>
 </section>
