--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,6 +12,34 @@
   --font-diamond: 'Diamond', sans-serif;
 }
 
+.fondoCont{
+  background-color: #101828;
+}
+
+.textoTitulo{
+  color: #f3f4f6;
+}
+
+.textoSubtitulo{
+  color: #d1d5dc;
+}
+
+.fondoTarj{
+  background-color: #1e2939a2 ;
+}
+
+.verdeResalt{
+  color: #73904B;
+}
+
+.bColor{
+  background-color: #73904B;
+}
+
+.verdeMarca{
+  color: #ACD14E;
+}
+
 @layer utilities {
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
