Deslizamientos color fondo raro arreglados en index

--- a/src/components/DondeEstamos.astro
+++ b/src/components/DondeEstamos.astro
@@ -1,5 +1,5 @@
-<section class="fondoTarj py-4 px-4 escaparate-slide">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+<section class="fondoTarj py-4 px-4">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8 escaparate-slide">
         <div
             class="flex flex-col lg:flex-row items-center gap-6 md:gap-10 p-6 md:p-12"
         >
