--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -1,5 +1,5 @@
-<section class="fondoTarj py-16 px-4 vehiculos-slide">
-    <div class="overflow-hidden py-6 sm:py-2">
+<section class="fondoTarj py-16 px-4">
+    <div class="overflow-hidden py-6 sm:py-2 vehiculos-slide">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div
                 class="mx-auto lg:grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col-reverse items-center"
