--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -1,5 +1,5 @@
-<section class="fondoTarj text-gray-300 py-16 px-4 aula-slide">
-  <div class="overflow-hidden py-6 sm:py-2">
+<section class="fondoTarj text-gray-300 py-16 px-4">
+  <div class="overflow-hidden py-6 sm:py-2 aula-slide">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center">
         <div class="lg:pt-4 lg:pr-8">
