--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@
           <button
             type="button"
             id="menu-button"
-            class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+            class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white :bg-gray-900"
             aria-controls="mobile-menu"
             aria-expanded="false"
           >
@@ -74,9 +74,16 @@
 
         icon.classList.remove('rotate-90');
         button.setAttribute('aria-expanded', 'false');
+        //wait 0.2 seconds before removing the background color
+        setTimeout(() => {
+          button.classList.remove('bg-gray-900');
+        }, 200);
+        //add transition to the button background color
+        button.classList.add('transition-colors', 'duration-700');
       } else {
         menu.classList.remove('max-h-0', 'opacity-0');
         menu.classList.add('max-h-96', 'opacity-100');
+        button.classList.add('bg-gray-900');
 
         icon.classList.add('rotate-90');
         button.setAttribute('aria-expanded', 'true');
