Textos index alineados izq

--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -18,7 +18,7 @@
                 </div>
                 <div class="lg:pt-4 lg:pl-8">
                     <div
-                        class="lg:max-w-lg text-center flex flex-col items-center lg:items-start lg:block"
+                        class="lg:max-w-lg text-left flex flex-col items-center lg:items-start lg:block"
                     >
                         <h2 class="text-base/7 font-semibold verdeMarca">
                             Aprueba más rápido
