--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -3,7 +3,7 @@
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center">
         <div class="lg:pt-4 lg:pr-8">
-          <div class="lg:max-w-lg text-center flex flex-col items-center lg:items-start lg:block">
+          <div class="lg:max-w-lg text-left flex flex-col items-start lg:items-start lg:block">
             <h2 class="text-base/7 font-semibold verdeMarca">
               Aprueba más rápido
             </h2>
