Cambiado orden foto texto index, mejora de margenes

--- a/src/components/DondeEstamos.astro
+++ b/src/components/DondeEstamos.astro
@@ -1,7 +1,7 @@
-<section class="fondoTarj py-4 px-4">
+<section class="fondoTarj py-3 px-4">
     <div class="mx-auto max-w-7xl px-6 lg:px-8 escaparate-slide">
         <div
-            class="flex flex-col lg:flex-row items-center gap-6 md:gap-10 p-6 md:p-12"
+            class="flex flex-col-reverse lg:flex-row items-center gap-6 md:gap-10 p-6 md:p-12"
         >
             <!-- Imagen -->
             <img
