--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -1,4 +1,4 @@
-<section class="fondoTarj py-16 px-4">
+<section class="fondoTarj py-1 md:py-16 px-4">
     <div class="overflow-hidden py-6 sm:py-2 vehiculos-slide">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div
