--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -1,16 +1,16 @@
-<section class="fondoTarj text-gray-300 py-16 px-4">
+<section class="fondoTarj text-gray-300 py-1 px-4">
   <div class="overflow-hidden py-6 sm:py-2 aula-slide">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center">
         <div class="lg:pt-4 lg:pr-8">
-          <div class="lg:max-w-lg text-left flex flex-col items-start lg:items-start lg:block">
+          <div class="lg:max-w-lg text-left flex flex-col items-center lg:items-start lg:block">
             <h2 class="text-base/7 font-semibold verdeMarca">
               Aprueba más rápido
             </h2>
             <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl">
               Un mejor método
             </p>
-            <p class="mt-6 text-lg/8 textoSubtitulo">
+            <p class="mt-6 text-lg/8 textoSubtitulo text-center">
               Tenemos aulas con ordenadores donde podrás estudiar
               la teoría de la conducción, practicar tests para el
               examen teórico y preguntar a los profesores.
