Arreglado boton mira nuestros cursos

--- a/src/components/Resumen.astro
+++ b/src/components/Resumen.astro
@@ -52,7 +52,7 @@
     <div class="text-center">
       <a
         href="/Cursos"
-        class="inline-block bColor textoTitulo text-lg font-medium px-6 py-3 rounded-full shadow hover:bg-[#5d743d] transition"
+        class="inline-block bColor textoTitulo text-lg font-medium px-6 py-3 rounded-full shadow hover:scale-102 hover:bg-[#5d743d]! transition"
       >
         ¡Mira nuestros cursos!
       </a>
