Añadido hover a inicio en nav

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -40,7 +40,7 @@
 
       <!-- Desktop links -->
       <div class="hidden lg:flex lg:ml-6 lg:space-x-4">
-        <a href="/" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">Inicio</a>
+        <a href="/" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white hover:bg-gray-700" aria-current="page">Inicio</a>
         <a href="/QuienesSomos" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Quiénes Somos</a>
         <a href="/Cursos" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Cursos</a>
         <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Contacto</a>
