Añadido target blank a nuestra ubicacion del footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
                     <a href="/QuienesSomos" class="me-4 md:me-6">Sobre nosotros</a>
                 </li>
                 <li class="hover:text-white">
-                    <a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6" class="me-4 md:me-6">Nuestra ubicación</a>
+                    <a href="https://maps.app.goo.gl/PDZTowfnfgaiCUmV6" target="_blank" class="me-4 md:me-6">Nuestra ubicación</a>
                 </li>
                 <li class="hover:text-white">
                     <i class="fa-solid fa-phone"></i> 638 24 87 31
