--- a/src/components/ListaCursos.astro
+++ b/src/components/ListaCursos.astro
@@ -37,7 +37,7 @@ enlace: 'https://www.dgt.es/nuestros-servicios/permisos-de-conducir/maniobras-b-
 },
 ];
 ---
-<section class="fondoCont py-20 px-6 sm:px-10">
+<section class="fondoCont py-10 md:py-15 px-6 sm:px-10">
   <h2 class="text-4xl font-extrabold text-center textoTitulo mb-16">Explora Nuestros Cursos</h2>
 
 <div class="flex flex-col gap-5 md:gap-15 max-w-5xl mx-auto">
