--- a/src/components/ListaCursos.astro
+++ b/src/components/ListaCursos.astro
@@ -38,7 +38,7 @@ enlace: 'https://www.dgt.es/nuestros-servicios/permisos-de-conducir/maniobras-b-
 ];
 ---
 <section class="fondoCont py-10 md:py-15 px-6 sm:px-10">
-  <h2 class="text-4xl font-extrabold text-center textoTitulo mb-16">Explora Nuestros Cursos</h2>
+  <h2 class="text-4xl font-extrabold text-center textoTitulo mb-16 verdeMarca">Explora Nuestros Cursos</h2>
 
 <div class="flex flex-col gap-5 md:gap-15 max-w-5xl mx-auto">
     {cursos.map((curso, idx) => (
@@ -54,7 +54,7 @@ enlace: 'https://www.dgt.es/nuestros-servicios/permisos-de-conducir/maniobras-b-
 
         <!-- Contenido -->
         <div class="w-full lg:w-1/2 space-y-4">
-          <h3 class="text-3xl font-bold textoTitulo">{curso.nombre}</h3>
+          <h3 class="text-3xl font-bold textoTitulo verdeCurso">{curso.nombre}</h3>
           <p class="text-lg textoSubtitulo leading-relaxed">{curso.descripcion}</p>
           <a target="_blank" href={curso.enlace} class="inline-block mt-4 text-sm font-semibold text-white bColor px-6 py-2 rounded-full shadow hover:scale-102 transition hover:bg-[#5d743d]!">
             Más información
