Cambiados colores texto a verde

--- a/src/components/ListaCursos.astro
+++ b/src/components/ListaCursos.astro
@@ -54,7 +54,7 @@ enlace: 'https://www.dgt.es/nuestros-servicios/permisos-de-conducir/maniobras-b-
 
         <!-- Contenido -->
         <div class="w-full lg:w-1/2 space-y-4">
-          <h3 class="text-3xl font-bold textoTitulo verdeCurso">{curso.nombre}</h3>
+          <h3 class="text-3xl font-bold textoTitulo verdeTitulo">{curso.nombre}</h3>
           <p class="text-lg textoSubtitulo leading-relaxed">{curso.descripcion}</p>
           <a target="_blank" href={curso.enlace} class="inline-block mt-4 text-sm font-semibold text-white bColor px-6 py-2 rounded-full shadow hover:scale-102 transition hover:bg-[#5d743d]!">
             Más información
