--- a/src/components/DondeEstamos.astro
+++ b/src/components/DondeEstamos.astro
@@ -13,7 +13,7 @@
             <!-- Texto -->
             <div class="md:w-3/4 lg:w-1/3">
                 <h2
-                    class="text-2xl text-center lg:text-left md:text-3xl font-bold mb-4 textoTitulo lg:border-l-4 lg:pl-2 lg:border-[#ACD14E]"
+                    class="text-2xl text-center lg:text-left md:text-3xl font-bold mb-4 verdeMarca lg:border-l-4 lg:pl-2 lg:border-[#ACD14E]"
                 >
                     Estamos en Grado
                 </h2>
