Más cambios de colores

--- a/src/components/Resumen.astro
+++ b/src/components/Resumen.astro
@@ -2,7 +2,7 @@
   class="fondoCont py-16 px-6 sm:px-10 lg:px-24 text-gray-800 resumen-slide"
 >
   <div class="max-w-5xl mx-auto">
-      <h2 class="text-3xl textoTitulo sm:text-4xl font-bold mb-6 text-center">
+      <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-center verdeMarca">
       Aprende a conducir con confianza
     </h2>
 
