--- a/src/components/Tarjetas.astro
+++ b/src/components/Tarjetas.astro
@@ -6,7 +6,7 @@ import 'swiper/css/navigation';
 
 <section class="py-16 fondoCont card-slide">
   <div class="max-w-6xl mx-auto px-4 text-center">
-    <h2 class="text-3xl font-bold text-gray-100 mb-10">¿Por qué elegirnos?</h2>
+    <h2 class="text-3xl font-bold text-gray-100 mb-10 verdeMarca">¿Por qué elegirnos?</h2>
 
     <!-- Carrusel en móviles -->
     <div class="lg:hidden">
@@ -15,7 +15,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <i class="fa-solid fa-shield text-4xl mb-4 text-[#ACD14E]"></i>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Conducción segura</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Conducción segura</h3>
               <p class="text-gray-300">Formamos conductores responsables y preparados para cualquier situación en la carretera.</p>
             </div>
           </div>
@@ -23,7 +23,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <div class="text-4xl mb-4">🚦</div>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Educación vial</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Educación vial</h3>
               <p class="text-gray-300">Aprende las normas de circulación de forma clara, rápida y estructurada con nosotros.</p>
             </div>
           </div>
@@ -31,7 +31,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <div class="text-4xl mb-4">📚</div>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Material actualizado</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Material actualizado</h3>
               <p class="text-gray-300">Tests y recursos siempre al día para mejorar tu preparación y tus capacidades para aprobar.</p>
             </div>
           </div>
@@ -39,7 +39,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <div class="text-4xl mb-4">🧑‍🏫</div>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Instructores expertos</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Instructores expertos</h3>
               <p class="text-gray-300">Profesionales con amplia experiencia y vocación docente.</p>
             </div>
           </div>
@@ -47,7 +47,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <div class="text-4xl mb-4">🔧</div>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Vehículos modernos</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Vehículos modernos</h3>
               <p class="text-gray-300">Aprende con los vehículos modernos y como controlar sus sistemas.</p>
             </div>
           </div>
@@ -55,7 +55,7 @@ import 'swiper/css/navigation';
           <div class="swiper-slide">
             <div class="fondoTarj shadow-md rounded-xl p-6 w-90 mx-auto flex flex-col items-center text-center">
               <div class="text-4xl mb-4">⏱️</div>
-              <h3 class="text-xl font-semibold verdeMarca mb-2">Flexibilidad horaria</h3>
+              <h3 class="text-xl font-semibold verdeResalt mb-2">Flexibilidad horaria</h3>
               <p class="text-gray-300">Nos adaptamos a tus horarios, tanto de mañana como de tarde.</p>
             </div>
           </div>
@@ -67,37 +67,37 @@ import 'swiper/css/navigation';
     <div class="hidden lg:grid lg:grid-cols-3 gap-6">
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <i class="fa-solid fa-shield text-4xl mb-4 text-[#ACD14E]"></i>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Conducción segura</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Conducción segura</h3>
         <p class="text-gray-300">Formamos conductores responsables y preparados para cualquier situación en la carretera.</p>
       </div>
 
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <div class="text-4xl mb-4">🚦</div>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Educación vial</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Educación vial</h3>
         <p class="text-gray-300">Aprende las normas de circulación de forma clara, rápida y estructurada con nosotros.</p>
       </div>
 
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <div class="text-4xl mb-4">📚</div>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Material actualizado</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Material actualizado</h3>
         <p class="text-gray-300">Tests y recursos siempre al día para mejorar tu preparación y tus capacidades para aprobar.</p>
       </div>
 
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <div class="text-4xl mb-4">🧑‍🏫</div>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Instructores expertos</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Instructores expertos</h3>
         <p class="text-gray-300">Profesionales con amplia experiencia y vocación docente.</p>
       </div>
 
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <div class="text-4xl mb-4">🔧</div>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Vehículos modernos</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Vehículos modernos</h3>
         <p class="text-gray-300">Aprende con los vehículos modernos y como controlar sus sistemas.</p>
       </div>
 
       <div class="fondoTarj shadow-md rounded-xl p-6 flex flex-col items-center text-center transition-transform duration-300 hover:scale-105">
         <div class="text-4xl mb-4">⏱️</div>
-        <h3 class="text-xl font-semibold verdeMarca mb-2">Flexibilidad horaria</h3>
+        <h3 class="text-xl font-semibold verdeResalt mb-2">Flexibilidad horaria</h3>
         <p class="text-gray-300">Nos adaptamos a tus horarios, tanto de mañana como de tarde.</p>
       </div>
     </div>
