--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,3 +1,6 @@
+---
+import Modal from './Modal.astro';
+---
 <!-- Responsive Navbar for Autoescuela La Flor -->
 <nav class="bg-gray-800 fixed top-0 left-0 w-full z-50 py-2">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
@@ -43,7 +46,7 @@
         <a href="/" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white hover:bg-gray-700" aria-current="page">Inicio</a>
         <a href="/QuienesSomos" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Quiénes Somos</a>
         <a href="/Cursos" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Cursos</a>
-        <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Contacto</a>
+        <a href="#contacto" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Contacto</a>
       </div>
     </div>
   </div>
@@ -54,10 +57,15 @@
       <a href="/" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Inicio</a>
       <a href="/QuienesSomos" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Quiénes Somos</a>
       <a href="/Cursos" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Cursos</a>
-      <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Contacto</a>
+      <a href="#contacto" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Contacto</a>
     </div>
   </div>
 </nav>
+
+<Modal />
+
+
+
 
 <script>
   const button = document.getElementById('menu-button');
@@ -97,4 +105,5 @@
     icon.classList.remove('rotate-90');
     button.setAttribute('aria-expanded', 'false');
   }
+
 </script>
