eliminado export function

--- a/src/components/ScriptModal.astro
+++ b/src/components/ScriptModal.astro
@@ -50,7 +50,7 @@
     }
   }
 
-  export function cerrarModal() {
+  function cerrarModal() {
     if (modal && modalContent) {
       modal.classList.remove("opacity-100");
       modal.classList.add("opacity-0");
